# kms-sfdc

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
admin-ui/: 2025-07-31-HPE-KMS-SFDC.txt  README.md  index.html  package-lock.json  package.json  vite.config.js
admin-ui/src/: App.jsx  main.jsx
admin-ui/src/components/: SchedulerConfig.jsx  Sidebar.jsx
admin-ui/src/pages/: BackupManager.jsx  Dashboard.jsx  DataQuality.jsx  HealthMonitor.jsx  Performance.jsx  SearchTest.jsx
config/: config.yaml
data/: health_metrics.json  scheduler_config.json  sync_state.json
data/backups/: backup_metadata.json
docs/: ADMIN_UI_GUIDE.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  LOAD_TESTING_GUIDE.md  README.md  SCALE_ARCHITECTURE.md  SCHEDULER_FIXES.md  SCHEDULER_GUIDE.md  SFDC_CONNECTION_GUIDE.md  TESTING_GUIDE.md  UV_MIGRATION.md
input/: KMS_v1.7.pptx  problemstmt.txt
jenkins/: Jenkinsfile
scripts/: build_index.py  build_index_mock.py  build_index_small.py  check_sfdc_fields.py  field_mapping.py  kms-sfdc-scheduler.service  run_api.py  setup_nomic.py  sync_cron.py  test_attachments.py  test_sfdc_connection.py
src/: __init__.py
src/data_extraction/: __init__.py  cfi_client.py  sfdc_client.py
src/kms_sfdc_vector_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scheduler/: __init__.py  scheduler_service.py  sync_job.py
src/search/: __init__.py  api.py
src/utils/: __init__.py  backup_manager.py  config.py  health_monitor.py  performance_metrics.py  text_extractor.py  text_processor.py
src/vectorization/: __init__.py  vector_db.py
tests/: __init__.py  conftest.py  test_sfdc_client.py  test_vector_db.py
tests/integration/: test_api_integration.py  test_search_workflow.py  test_sfdc_integration.py
tests/performance/: test_large_scale_performance.py
tests/unit/: test_api.py  test_backup_manager.py  test_config.py  test_health_monitor.py  test_sfdc_client.py  test_text_processor.py  test_vector_db.py
(+35 files in other folders)
